jenkins-debian-glue: add jdg patch
This:
- fixes jdg-debc to call debc with --architecture if necessary,
  so that it works for any architecture
- modifies build-and-provide-package's use of freight to:
  - not create incorrect freight directories
  - tighten permissions on freight's VARLIB directory
  - not sure about the SKIP_MISSING_BINARY_REMOVAL bit...

--- a/jenkins-debian-glue-builder/Dockerfile
+++ b/jenkins-debian-glue-builder/Dockerfile
@@ -50,6 +50,10 @@ RUN set -x && \
     \
     rm -rf /var/lib/apt/lists/*
 
+COPY jdg.patch /root
+RUN set -x && \
+    cd /usr/bin && patch -p2 < /root/jdg.patch
+
 #    apt-get install -y jenkins-debian-glue jenkins-debian-glue-buildenv
 #    echo 'MIRRORSITE=http://archive.ubuntu.com/ubuntu' > /etc/pbuilderrc.ubuntu.trusty && \
 #    echo 'COMPONENTS="main universe"' >> /etc/pbuilderrc.ubuntu.trusty && \
