jenkins-debian-glue: pxz has been dropped from sid
Builds are failing as the pxz package doesn't exist in SID
anymore - xz -T is a full replacement

https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=919616

--- a/jenkins-debian-glue-builder/Dockerfile
+++ b/jenkins-debian-glue-builder/Dockerfile
@@ -33,7 +33,7 @@ RUN set -x && \
                        curl ca-certificates \
                        pristine-tar quilt \
                        qemu-user-static && \
-    apt-get install -y pxz && \
+    apt-get install -y xz-utils && \
     \
     wget -P /usr/share/keyrings http://archive.ubuntu.com/ubuntu/project/ubuntu-archive-keyring.gpg && \
     wd=$(mktemp -d --tmpdir) && \
